cplussharp/vscode/rusttest/ncnntengine2rs/tengine_c_api.h

/* follow the std. UNIX log level definitioin */
enum log_level
{
    LOG_EMERG,
    LOG_ALERT,
    LOG_CRIT,
    LOG_ERR,
    LOG_WARNING,
    LOG_NOTICE,
    LOG_INFO,
    LOG_DEBUG
};
typedef void* context_t;
typedef void* graph_t;
typedef void (*log_print_t)(const char*);
/*!
 * @brief Get the device number assigned to a context.
 *
 * @param [in] context: The context handle.
 *
 * @return The number of devices inside the context.
 */
DLLEXPORT int get_context_device_number(context_t context);
/*!
 *  @brief Add a device into one context.
 *
 *  @param [in] context: The context handle.
 *  @param [in] dev_name: The device name.
 *
 *  @return 0: Success, -1: Fail.
 */
DLLEXPORT int add_context_device(context_t context, const char* dev_name);
/*!
 *  @brief Remove a device from one context.
 *
 *  @param [in] context: The context handle.
 *  @param [in] dev_name: The device name.
 *
 *  @return 0: Success, -1: Fail.
 */
DLLEXPORT int remove_context_device(context_t context, const char* dev_name);
/*!
 * @brief Set attribute item of a context.
 *
 * @param [in] context: The context handle.
 * @param [in] attr_name: The attribute item name.
 * @param [in] val: The buffer to hold the data to set.
 * @param [in] size: The buffer size.
 * @return 0: Success, -1: Fail.
 */
DLLEXPORT int set_context_attr(context_t context, const char* attr_name, const void* val, int val_size);
/*!
 * @brief Get the attribute item of a context.
 *
 * @param [in] context: The context handle.
 * @param [in] attr_name: The attribute item name.
 * @param [out] val: The buffer to hold the data.
 * @param [in] size: The buffer size.
 * @return 0: Succuess, -1: Fail.
 */
DLLEXPORT int get_context_attr(context_t context, const char* attr_name, void* val, int val_size);
/*
 * Misc API
 */

/*!
 * @brief return the error number
 *        list of the symbolic error name follows glibc definitions
 *
 * @return the last error set in library
 *
 * @note It is MT-safe
 */

DLLEXPORT int get_tengine_errno(void);
/*!
 * @brief return and clear the error number
 *        list of the symbolic error name follows glibc definitions
 *
 * @return the last error set in library
 *
 * @note It is MT-safe
 */

DLLEXPORT int clr_tengine_errno(void);
/*!
 * @brief Set the logger level.
 *
 * @param [in] level: The log level.
 */
DLLEXPORT void set_log_level(enum log_level level);
/*!
 * @brief set the print function of log.
 *
 * @param [in] func: The print function.
 *
 * @return None.
 *
 * @note  default log output is stdout
 */
DLLEXPORT void set_log_output(log_print_t func);
/*!
 * @brief Dump the run-time graph.
 *        If the graph is dumpped after prerun(), it will dump the optimized graph instead of the origin one.
 *
 * @param [in] graph: The graph handle.
 */
DLLEXPORT void dump_graph(graph_t graph);
/**************************** Plug-in operate set *******************/
/*!
 * @brief Load one plugin from disk, and execute the init function.
 *
 * @param [in] plugin_name: Plugin name.
 * @param [in] fname: Plugin file name.
 * @param [in] init_func_name: The name of the init function.
 *
 * @return 0: Plugin loaded and inited Success,
 *      -1: Fail
 */
DLLEXPORT int load_tengine_plugin(const char* plugin_name, const char* fname, const char* init_func_name);
/*!
 * @brief Unload one plugin and call the release function.
 *
 * @param [in] plugin_name: The name of plugin.
 * @param [in] rel_func_name: The release function name.
 *
 * @return  0: Success;
 *      -1: Fail.
 */
DLLEXPORT int unload_tengine_plugin(const char* plugin_name, const char* rel_func_name);
/*!
 * @brief Get the number of loaded plugin.
 *
 * @return The plugin number.
 */
DLLEXPORT int get_tengine_plugin_number(void);
/*!
 * @brief Get the name of #idx plugin.
 *
 * @param [in] idx: The index of loaded plugin.
 *
 * @return The name of plugin.
 */
DLLEXPORT const char* get_tengine_plugin_name(int idx);
DLLEXPORT const char* get_tengine_hcl_version(void);