cplussharp/vscode/rusttest/ncnntengine2rs/tengine_c_api.rs

extern "C" {
    #[doc = " @brief Get the device number assigned to a context."]
    #[doc = ""]
    #[doc = " @param [in] context: The context handle."]
    #[doc = ""]
    #[doc = " @return The number of devices inside the context."]
    pub fn get_context_device_number(context: context_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "  @brief Add a device into one context."]
    #[doc = ""]
    #[doc = "  @param [in] context: The context handle."]
    #[doc = "  @param [in] dev_name: The device name."]
    #[doc = ""]
    #[doc = "  @return 0: Success, -1: Fail."]
    pub fn add_context_device(
        context: context_t,
        dev_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "  @brief Remove a device from one context."]
    #[doc = ""]
    #[doc = "  @param [in] context: The context handle."]
    #[doc = "  @param [in] dev_name: The device name."]
    #[doc = ""]
    #[doc = "  @return 0: Success, -1: Fail."]
    pub fn remove_context_device(
        context: context_t,
        dev_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set attribute item of a context."]
    #[doc = ""]
    #[doc = " @param [in] context: The context handle."]
    #[doc = " @param [in] attr_name: The attribute item name."]
    #[doc = " @param [in] val: The buffer to hold the data to set."]
    #[doc = " @param [in] size: The buffer size."]
    #[doc = " @return 0: Success, -1: Fail."]
    pub fn set_context_attr(
        context: context_t,
        attr_name: *const ::std::os::raw::c_char,
        val: *const ::std::os::raw::c_void,
        val_size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the attribute item of a context."]
    #[doc = ""]
    #[doc = " @param [in] context: The context handle."]
    #[doc = " @param [in] attr_name: The attribute item name."]
    #[doc = " @param [out] val: The buffer to hold the data."]
    #[doc = " @param [in] size: The buffer size."]
    #[doc = " @return 0: Succuess, -1: Fail."]
    pub fn get_context_attr(
        context: context_t,
        attr_name: *const ::std::os::raw::c_char,
        val: *mut ::std::os::raw::c_void,
        val_size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief return the error number"]
    #[doc = "        list of the symbolic error name follows glibc definitions"]
    #[doc = ""]
    #[doc = " @return the last error set in library"]
    #[doc = ""]
    #[doc = " @note It is MT-safe"]
    pub fn get_tengine_errno() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief return and clear the error number"]
    #[doc = "        list of the symbolic error name follows glibc definitions"]
    #[doc = ""]
    #[doc = " @return the last error set in library"]
    #[doc = ""]
    #[doc = " @note It is MT-safe"]
    pub fn clr_tengine_errno() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the logger level."]
    #[doc = ""]
    #[doc = " @param [in] level: The log level."]
    pub fn set_log_level(level: log_level);
}
extern "C" {
    #[doc = " @brief set the print function of log."]
    #[doc = ""]
    #[doc = " @param [in] func: The print function."]
    #[doc = ""]
    #[doc = " @return None."]
    #[doc = ""]
    #[doc = " @note  default log output is stdout"]
    pub fn set_log_output(func: log_print_t);
}
extern "C" {
    #[doc = " @brief Dump the run-time graph."]
    #[doc = "        If the graph is dumpped after prerun(), it will dump the optimized graph instead of the origin one."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    pub fn dump_graph(graph: graph_t);
}
extern "C" {
    #[doc = " Plug-in operate set *******************/"]
    #[doc = " @brief Load one plugin from disk, and execute the init function."]
    #[doc = ""]
    #[doc = " @param [in] plugin_name: Plugin name."]
    #[doc = " @param [in] fname: Plugin file name."]
    #[doc = " @param [in] init_func_name: The name of the init function."]
    #[doc = ""]
    #[doc = " @return 0: Plugin loaded and inited Success,"]
    #[doc = "      -1: Fail"]
    pub fn load_tengine_plugin(
        plugin_name: *const ::std::os::raw::c_char,
        fname: *const ::std::os::raw::c_char,
        init_func_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Unload one plugin and call the release function."]
    #[doc = ""]
    #[doc = " @param [in] plugin_name: The name of plugin."]
    #[doc = " @param [in] rel_func_name: The release function name."]
    #[doc = ""]
    #[doc = " @return  0: Success;"]
    #[doc = "      -1: Fail."]
    pub fn unload_tengine_plugin(
        plugin_name: *const ::std::os::raw::c_char,
        rel_func_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the number of loaded plugin."]
    #[doc = ""]
    #[doc = " @return The plugin number."]
    pub fn get_tengine_plugin_number() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the name of #idx plugin."]
    #[doc = ""]
    #[doc = " @param [in] idx: The index of loaded plugin."]
    #[doc = ""]
    #[doc = " @return The name of plugin."]
    pub fn get_tengine_plugin_name(idx: ::std::os::raw::c_int) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_tengine_hcl_version() -> *const ::std::os::raw::c_char;
}
